# HPyX

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: codebase-analysis.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  performance_issue.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml
benchmarks/: test_bench_hpx_linalg.py
docs/: .nav.yml  CONTRIBUTING.md  _toc.yml  architecture-decisions.md  index.md  quickstart.ipynb  usage.md
docs/.overrides/css/: mkdocstrings.css  style.css
docs/.overrides/partials/: logo.html
docs/codebase-analysis/dask/: CODEBASE_KNOWLEDGE.md
docs/codebase-analysis/distributed/: CODEBASE_KNOWLEDGE.md
docs/codebase-analysis/distributed/assets/: architecture_diagram.md  task_lifecycle_sequence.md
docs/codebase-analysis/hpx/: CODEBASE_KNOWLEDGE.md
docs/design-docs/: 2026-04-24-benchmarking-v0-design.md  benchmarking_profiling_sdd.md
docs/plans/: 2026-04-24-hpyx-v1-phase-0-foundation.md  2026-04-24-hpyx-v1-phase-1-futures-executor-asyncio.md  2026-04-24-hpyx-v1-phase-2-parallel-kernels-execution.md  2026-04-24-hpyx-v1-phase-3-benchmarks-diagnostics.md  2026-04-24-hpyx-v1-phase-4-docs-migration-ci.md
docs/reference/: api.md
docs/specs/: 2026-04-24-hpyx-dask-inspired-array-design.md  2026-04-24-hpyx-pythonic-hpx-binding-design.md  original-user-stories.md
plugins/hpx-dev/: README.md
plugins/hpx-dev/.claude-plugin/: plugin.json
plugins/hpx-dev/agents/: benchmark-engineer.md  binding-reviewer.md  hpx-api-explorer.md
plugins/hpx-dev/skills/add-binding/: SKILL.md
plugins/hpx-dev/skills/benchmarking/: SKILL.md
plugins/hpx-dev/skills/benchmarking/references/: benchmark-analysis.md
plugins/hpx-dev/skills/build-system/: SKILL.md
plugins/hpx-dev/skills/build-system/references/: build-errors.md  hpx-from-source.md
plugins/hpx-dev/skills/gil-management/: SKILL.md
plugins/hpx-dev/skills/gil-management/references/: gil-edge-cases.md
plugins/hpx-dev/skills/hpx-architecture/: SKILL.md
plugins/hpx-dev/skills/hpx-architecture/references/: hpx-api-map.md  hpx-distributed.md
plugins/hpx-dev/skills/nanobind-patterns/: SKILL.md
plugins/hpx-dev/skills/nanobind-patterns/references/: nanobind-api.md
scripts/: build.sh  rtd-publish.sh
src/: algorithms.cpp  algorithms.hpp  bind.cpp  executor.py  init_hpx.cpp  init_hpx.hpp  main.cpp
src/_core/: bind.cpp  futures.cpp  futures.hpp  runtime.cpp  runtime.hpp
src/hpyx/: __init__.py  _runtime.py  _version.py  aio.py  config.py  debug.py  executor.py  hello.py  runtime.py
src/hpyx/futures/: __init__.py  _future.py  _submit.py
src/hpyx/multiprocessing/: __init__.py  _for_loop.py  for_loop.py
src/hpyx/util/: __init__.py  print_versions.py
tests/: conftest.py  test_add.py  test_aio.py  test_config.py  test_dask_integration.py  test_debug.py  test_executor.py  test_for_loop.py  test_futures.py  test_hello.py  test_hpx_hello.py  test_hpx_linalg.py  test_runtime.py  test_submit.py
