[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.9.5", "nanobind", "setuptools_scm >=8"]

[project]
name = "hpyx"
dynamic = ["version"]
description = "Python Binding for HPX C++ library"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=8",
    "pytest-cov",
    "pytest-xdist",
    "pytest-mock",
]
docs = [
    "sphinx_rtd_theme",
    "sphinx-automodapi",
    "sphinx-panels",
    "sphinxcontrib-mermaid",
    "jupyter-book",
    "numpydoc",
]
all = ["hpyx[dev,docs]"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/uw-ssec/HPyX"
Documentation = "https://ssec-hypx.readthedocs.io"
Repository = "https://github.com/uw-ssec/hpyx.git"
Issues = "https://github.com/uw-ssec/HPyX/issues"

# Setuptools SCM Options
[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/hpyx/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hpyx", "hpyx.*"]

# Scikit-build options
[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.source-dir = "."
sdist.exclude = [".pixi"]

minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/hpyx/_version.py"]

# Pytest options
[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-vvv", "-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = false
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

# Mypy options
[tool.mypy]
files = ["src", "tests"]
python_version = "3.13"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["hpyx.*"]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Ruff options
[tool.ruff]
exclude = ["tests/**", "testing.py", "**/_version.py"]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001",  # Conflicts with formatter
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["{{ cookiecutter.__project_slug }}._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
